src/test/deca/context/invalid/created/objet/field_call.deca
// description :
//      appel de la methode incorrecte : trop de parametre
// Resultat
//      Ligne 11 : ce n'est pas une methode
class A {
    int x ;
}

{
    A a = new A() ;
    a.x() ;
    
}